--- a/plinko.html
+++ b/plinko.html
@@ -29,7 +29,7 @@
         <!--<h2>Click inside the box to create a ball</h2>-->
         <h2 class='score'>Your Score: 0</h1>
         <h2 class='coin'>Coins left: 5</h1>
-        <a href="home.html">Return Home</a>
+        <a href="index.html">Return Home</a>
         <button class = 'reset'>Reset</button>
         <button class = 'add5'>Add 5 Coins</button>
         <br>
