--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <!-- HTML -->
         
         <!--<a href="plinko.html">click me</a>-->
-        <h1>Chose a game that looks intresting</h1>
+        <h1>Pick a game that looks interesting</h1>
         <img src="plinko.png"></img>
         <br>
         <a href="plinko.html">Plinko</a>
