--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             }
         </style>
         
-        <title>Title</title>
+        <title>Arcade</title>
     </head>
     <body>
         <!-- HTML -->
