--- a/plinko.html
+++ b/plinko.html
@@ -219,7 +219,7 @@
                         console.log(event)
                         console.log(event.clientY)
                     
-                        //Determining the # of points earned
+                        //Determining the # of points earned and removes ball
                         setTimeout(function(){
                             if(circles.position.y > 400){
                                 if(circles.position.x > -20 && circles.position.x < 150 || circles.position.x > 650 && circles.position.x < 820){
